templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classification-model-deployment
  namespace: f1-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: classification-model-app
  template:
    metadata:
      labels:
        app: classification-model-app
    spec:
      containers:
        - name: classification-model-app
          image: f1-image-classification-model:v0.8
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
