templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classification-model-service
  labels:
    app: f1-platform
    component: fastapi-classify
spec:
  type: NodePort
  selector:
    app: classification-model-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
      name: http
