templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: classification-model-ingress
    namespace: f1-platform
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: classify.f1-platform.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: classification-model-service
                port:
                  number: 8000
